# Repository-Risk-Radar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  render.yaml  turbo.json
.cursor/rules/: ai-agent.mdc  architecture.mdc  backend.mdc  code-reviewer.mdc  frontend.mdc
apps/agent/: AGENTS.md  README.md  pyproject.toml
apps/agent/src/repo_risk_radar/: __init__.py  __main__.py  agent.py  cli.py  config.py  models.py  release_policy.py
apps/agent/src/repo_risk_radar/analyzers/: dependency_parser.py  repo_detector.py  risk_ranker.py
apps/agent/src/repo_risk_radar/reporting/: json_report.py  markdown_report.py
apps/agent/src/repo_risk_radar/services/: epss_client.py  github_client.py  nvd_client.py  osv_client.py
apps/agent/tests/: test_dependency_parser.py  test_release_policy.py  test_repo_detector.py  test_risk_ranker.py
apps/client/: AGENTS.md  components.json  package.json  tailwind.config.ts
apps/client/src/app/: globals.css  layout.tsx  page.tsx
apps/client/src/components/: risk-dashboard.tsx  scan-experience.tsx
apps/client/src/components/ui/: animated-theme-toggle-button.tsx  badge.tsx  button.tsx  card.tsx  infinite-grid-pattern.tsx  input.tsx  progress.tsx  server-management-table.tsx  switch.tsx  tooltip.tsx  (+1 more)
apps/client/src/lib/: api.ts  types.ts  utils.ts
apps/server/: AGENTS.md  package.json
apps/server/src/: main.ts
apps/server/src/modules/: app.module.ts  demo-scan.ts  health.controller.ts  scan.controller.ts  scan.dto.ts  scan.service.ts
docs/: engineering-conventions.md
(+49 files in other folders)
