[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "repo-risk-radar"
version = "0.1.0"
description = "Defensive dependency security risk analysis for public GitHub repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Repo Risk Radar" }]
dependencies = [
  "httpx>=0.27",
  "openai-agents>=0.0.16",
  "packaging>=24.0",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
repo-risk-radar = "repo_risk_radar.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_risk_radar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
